Monkeypatched in extra user info

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
 <body>
   
   <% if current_user %>
-    Yo, <%= current_user.name %>!
+    Yo, <%= current_user.name %>
+    <%= image_tag current_user.picture_url %>
     <%= link_to "Sign Out", logout_path %>
   <% else %>
     <%= link_to "Sign in with Twitter", auth_request_path(service: "twitter") %>
