--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,25 +1,10 @@
-<h1>Listing photos</h1>
-
-<table>
-  <tr>
-    <th>User</th>
-    <th>Photo</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @photos.each do |photo| %>
-  <tr>
-    <td><%= photo.user_id %></td>
-    <td><%= photo.photo %></td>
-    <td><%= link_to 'Show', photo %></td>
-    <td><%= link_to 'Edit', edit_photo_path(photo) %></td>
-    <td><%= link_to 'Destroy', photo, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+	<div>
+  	<%= photo.user_id %>
+  	<%= debug photo.photo_url %>
+  	<%= link_to 'Show', photo %>
+  	<%= link_to 'Destroy', photo, :confirm => 'Are you sure?', :method => :delete %>
+	</div>	
 <% end %>
-</table>
 
-<br />
-
-<%= link_to 'New Photo', new_photo_path %>
+<%= link_to 'Upload a New Photo', new_photo_path if current_user %>
