--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+  <%= link_to "Home", root_path %>
   
   <% if current_user %>
     Yo, <%= link_to current_user.name, user_path(current_user.id) %>
